--- a/styles/main.css
+++ b/styles/main.css
@@ -1,3 +1,43 @@
+/*navigation*/
+.navigation {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  background-color: #5474FD;
+}
+
+.nav-container {
+  width: 100%;
+  max-width: 1773px;
+  height: 83px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 20px;
+}
+
+.logo {
+  color: #FFFFFF;
+  font-size: 24px;
+  font-weight: bold;
+}
+
+.nav-list {
+  display: flex;
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  gap: 2rem;
+}
+.nav-list li a {
+  color: #FFFFFF;
+  text-decoration: none;
+  font-size: 16px;
+}
+.nav-list li a:hover {
+  text-decoration: underline;
+}
+
 * {
   margin: 0;
   padding: 0;
@@ -103,8 +143,4 @@ body {
 .landing-page .scroll-down i {
   font-size: 20px;
   margin-top: 10px;
-}
-
-.header .navigation {
-  align-content: end;
 }/*# sourceMappingURL=main.css.map */
