--- a/styles/main.scss
+++ b/styles/main.scss
@@ -1,3 +1,7 @@
+@import 'nav';
+
+
+
 * {
     margin: 0;
     padding: 0;
@@ -122,9 +126,5 @@
     
   }
   
-  .header {
-    .navigation {
-      align-content: end;
-    }
-  }
+ 
   
